--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -68,3 +68,104 @@ table {
 	visibility: hidden;
 	line-height: 0;
 }
+
+/* =========================================== */
+/* common css */
+#wrap {
+    max-width: 460px;
+    min-height: calc(100%-150px);
+}
+
+/* header */
+#header {
+    width: 100%;
+    background: #48d1cc;
+}
+#header .inner {
+    height: 125px;
+}
+#header h1 {
+    text-align: center;
+}
+#header h1 a {
+    color: #fff;
+    font-weight: 600;
+    font-size: 20px;
+}
+
+#header .nav {
+    margin-top: 60px;
+}
+#header .nav .gnb {}
+#header .nav .gnb li {
+    float: left;
+    padding-left: 7px;
+}
+#header .nav .gnb li a {
+    font-weight: 500;
+    font-size: 12px;
+    transition: 0.1s;
+}
+#header .nav .gnb li a:hover {
+    font-weight: 600;
+    border-bottom: 1px solid #333;
+}
+
+#header .searchWrap {
+    height: 20px;
+    width: 200px;
+    border: 1px solid #1b5ac2;
+    background: #fff;
+
+    margin-left: 247px;
+    margin-top: 60px;
+}
+#header .searchWrap input {
+    font-size: 16px;
+    width: 150px;
+    border: none;
+    float: left;
+}
+#header .searchWrap input::placeholder {
+    font-size: 11px;
+}
+#header .searchWrap input:-ms-input-placeholder {
+    color: #a8a8a8;
+}
+#header .searchWrap input::-webkit-input-placeholder {
+    color: #a8a8a8;
+}
+#header .searchWrap input::-moz-placeholder {
+    color: #a8a8a8;
+}
+#header .searchWrap .search {
+    width: 35px;
+    height: 100%;
+    border: 0;
+    background: #1b5ac2;
+    float: right;
+    color: #fff;
+    font-size: 11.5px;
+    box-shadow: 3px 3px 3px #111;
+}
+#header .searchWrap .search:active {
+    margin-left: 5px;
+    margin-top: 5px;
+    box-shadow: none;
+}
+
+/* footer */
+#footer {
+    width: 100%;
+    background: #555;
+}
+#footer .inner {
+    height: 20px;
+}
+#footer p {
+    text-align: right;
+    font-size: 10px;
+    font-weight: 600;
+    color: #fff;
+    padding-right: 10px;
+}
