--- a/assets/css/ceo.css
+++ b/assets/css/ceo.css
@@ -30,19 +30,21 @@
 }
 
 .ceoPost .remote {
+    width: 80%;
     margin-bottom: 10px;
 }
 .ceoPost .menu {
-    width: 100%;
+    width: 95%;
     border-top: 1px solid #444;
     border-collapse: collapse;
     margin-bottom: 25px;
 }
 .ceoPost .menu th,td {
     border-bottom: 1px solid #444;
-    padding: 10px;
+    padding: 18px;
     text-align: center;
     vertical-align: middle;
+    font-size: 13px;
 }
 .ceoPost .pageWrap {
     text-align: center;
@@ -71,6 +73,19 @@
     margin-left: 5px;
     margin-top: 5px;
     box-shadow: none;
+}
+
+.deleteBtn {
+    background: #ff0044;
+    color: #fff;
+    border-radius: 5px;
+    transition: 0.7s;
+    font-size: 4px;
+}
+.deleteBtn:hover {
+    background: #fff;
+    color: #f04;
+    font-weight: 600;
 }
 
 
@@ -109,6 +124,27 @@ form .submitBtn button {
     transition: 0.3s;
 }
 form .submitBtn button:hover {
+    background: #333;
+    color: #fff;
+}
+
+/* ===================================== */
+/* ceoGet.html */
+.get {
+    font-size: 17px;
+    font-weight: 600;
+}
+.getBox {
+    border: 1px solid #111;
+    padding: 20px;
+    margin-top: 20px;
+}
+.homeBtn {
+    transition: 0.3s;
+    background: none;
+    margin-top: 10px;
+}
+.homeBtn:hover {
     background: #333;
     color: #fff;
 }
