--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -35,12 +35,10 @@ body {
     font-family: 'Noto Sans KR', sans-serif;
 	cursor: default;
 }
-a, button {
-	line-height: 1.7;
-    font-size: 17px;    
+a, button, .btn {   
     text-decoration: none;
-    color:#333;
 	cursor: pointer;
+    color: #333;
 }
 
 ol, ul , li {
