--- a/assets/css/customer.css
+++ b/assets/css/customer.css
@@ -1,3 +1,4 @@
+/* header */
 #header h1 {
   color: #fff;
   font-weight: 600;
@@ -5,8 +6,9 @@
 
 #card-list {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    list-style: none;
+    grid-template-columns: repeat(1, 1fr);
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .movie-card {
@@ -39,46 +41,57 @@
     background-color: #e8344e !important;
   }
   
-  .btn-sparta {
-    color: #ffffff !important;
-    background-color: #e8344e !important;
-    border-color: #e8344e !important;
+.btn-sparta {
+  color: #ffffff !important;
+  background-color: #e8344e !important;
+  border-color: #e8344e !important;
+}
+
+.btn-outline-sparta {
+  color: #e8344e !important;
+  background-color: #ffffff !important;
+  border-color: #e8344e !important;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+  color: #ffffff;
+}
+
+.navbar-dark .navbar-nav .nav-link:focus,
+.navbar-dark .navbar-nav .nav-link:hover {
+  color: #ffffff;
+}
+
+.wrap {
+  width: 80%;
+  max-width: 600px;
+  margin: 10px auto;
+}
+
+.modal-header {
+  border-bottom-color: #ffffff;
+}
+
+.modal-footer {
+  border-top-color: #ffffff;
+}
+
+.alert {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin-bottom: 0;
+  width: 100%;
+}
+
+
+.jumbotron {
+    border-radius: 0;
   }
-  
-  .btn-outline-sparta {
-    color: #e8344e !important;
-    background-color: #ffffff !important;
-    border-color: #e8344e !important;
-  }
-  
-  .navbar-dark .navbar-nav .nav-link {
-    color: #ffffff;
-  }
-  
-  .navbar-dark .navbar-nav .nav-link:focus,
-  .navbar-dark .navbar-nav .nav-link:hover {
-    color: #ffffff;
-  }
-  
-  .wrap {
-    width: 80%;
-    max-width: 600px;
-    margin: 10px auto;
-  }
-  
-  .modal-header {
-    border-bottom-color: #ffffff;
-  }
-  
-  .modal-footer {
-    border-top-color: #ffffff;
-  }
-  
-  .alert {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    margin-bottom: 0;
-    width: 100%;
+
+  @media screen and (max-width: 576px) {
+    .form-group {
+      margin-bottom: 0.25rem;
+    }
   }
   
